--- a/src/styles/formbuilder.scss
+++ b/src/styles/formbuilder.scss
@@ -10,7 +10,7 @@
 .form-builder-canvas {
   flex-grow: 1;
   padding: 50px 80px;
-  background-color: $color-bg-canvas;
+  // background-color: $color-bg-canvas;
   overflow-y: auto;
   position: relative;
   
